--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.1.6",
     "vite": "^3.0.0"
   }
 }
