--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier-plugin-tailwindcss": "^0.1.12",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.6",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
