--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@vueuse/core": "^8.9.4",
     "axios": "^0.27.2",
+    "pinia": "^2.0.16",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.14",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
