--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^8.9.4",
     "axios": "^0.27.2",
     "pinia": "^2.0.16",
+    "pinia-plugin-persistedstate": "^1.6.3",
     "vue": "^3.2.37",
     "vue-router": "^4.0.14"
   },
